<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milk" >

    <com.etek.ui.TitleBarView
        android:id="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

   

        <LinearLayout
            android:layout_below="@id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

           
            <RelativeLayout
                android:id="@+id/settings_match_remote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
             
                android:layout_margin="20dp"
         	android:layout_weight="1"
                android:background="@drawable/ll_bg_d" >

                <ImageView
                    android:id="@+id/img_add_remote"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/device_selection" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                  
                    android:layout_below="@id/img_add_remote"
                    android:text="@string/match_remote" />

             
            </RelativeLayout>
             <RelativeLayout
                android:id="@+id/settings_search_remote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
             android:layout_weight="1"
                android:layout_margin="20dp"
         
                android:background="@drawable/ll_bg_d" >

                <ImageView
                    android:id="@+id/img_search_remote"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                
                    android:contentDescription="@string/search"
                    android:src="@drawable/search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                  
                    android:layout_below="@id/img_search_remote"
                    android:text="@string/search_remote" />

             
            </RelativeLayout>
        </LinearLayout>
   

</RelativeLayout>