<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milk"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.etek.ui.TitleBarView
        android:id="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <GridView
        android:id="@+id/gv_remote_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:id="@+id/ll_learn_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#dddddd"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_learn_save"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@drawable/btn_nor_round_selector"
            android:text="@string/save_text" />

       
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_learn_bottom2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_learn_bottom"
        android:background="#dddddd"
        android:layout_marginBottom="20dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_learn_add"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@drawable/btn_nor_round_selector"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_learn_bottom2"
        android:background="@color/textbackground"
         android:layout_marginBottom="20dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/learn_remote_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/learn_remote_brand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/brand"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/learn_remote_model"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/model"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>